assignment-2762-styling: in progress

--- a/src/index.css
+++ b/src/index.css
@@ -2,4 +2,14 @@ body {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
+  background: url('https://images.pexels.com/photos/92083/pexels-photo-92083.jpeg?cs=srgb&dl=cassette-cassette-tape-music-92083.jpg&fm=jpg') no-repeat center center fixed;  */
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover; 
+}
+
+
+body, html {
+  height: 100%;
 }
