--- a/client/src/App.css
+++ b/client/src/App.css
@@ -2,6 +2,10 @@
   text-align: center;
 }
 
+#title {
+  position: left;
+}
+
 h1 {
   font-family: 'Permanent Marker', cursive;
   padding-left: 80px;
@@ -55,14 +59,34 @@ nav {
   list-style-type: none;
 	margin: 0;
 	padding: 0;
-  text-align: center;
   border-bottom: double;
   opacity: 0.5;
 } 
 
+/* library */
+
 .library {
   font-family: 'Permanent Marker', cursive;
   font-size: 150%;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  width: 100%;
+  height: 400;
+  margin: auto;
+}
+
+.libraryItem {
+  width: 270px;
+    padding: 16px;
+    text-align: center;
+    border: 1px solid #eee;
+    box-shadow: 0 2px 3px #ccc;
+    margin: 10px;
+    box-sizing: border-box;
+    height: 400;
+    cursor: pointer;
+    flex-basis: 15em;
 }
 
 .album_image {
@@ -102,6 +126,73 @@ nav {
   font-family: 'Permanent Marker', cursive;
   font-size: 100%;
 }
+
+/* album image display */
+.outerAlbumContainer {
+  font-size: 150%;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  width: 100%;
+  height: 400;
+  margin: auto;
+}
+
+
+.imageContainer{
+  position: relative;
+  width: 50%;
+  width: 340px;
+  padding: 16px;
+  text-align: center;
+  border: 1px solid #eee;
+  box-shadow: 0 2px 3px #ccc;
+  margin: 10px;
+  box-sizing: border-box;
+  height: 400;
+  cursor: pointer;
+  flex-basis: 15em;
+}
+
+/* .songImage {
+  display: block;
+  width: 100%;
+  height: auto;
+} */
+
+/* .overlay {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  height: 100%;
+  width: 100%;
+  opacity: 0;
+  transition: .5s ease;
+  background-color: gray;
+} */
+
+.imageContainer:hover .songImage {
+  background-color: gray;
+  opacity: 0.2;
+}
+
+.imageContainer:hover .overlay {
+  opacity: 1;
+}
+
+.hoverIcon {
+  position: absolute;
+  top: 40%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+  text-align: center;
+}
+
+
 
 
 
