--- a/client/src/App.css
+++ b/client/src/App.css
@@ -2,6 +2,10 @@
   text-align: center;
 }
 
+header {
+  background-color: #d9d9d9;
+}
+
 #title {
   position: left;
 }
@@ -74,6 +78,8 @@ nav {
   width: 100%;
   height: 400;
   margin: auto;
+  background-color: black;
+  background-image: linear-gradient(to bottom right, black, #c4c5c6);
 }
 
 .libraryItem {
@@ -93,6 +99,10 @@ nav {
   height: 200px;
   width: 200px;
 }
+
+.albumName {
+  color: white;
+} 
 
 .song {
   font-family: 'Permanent Marker', cursive;
@@ -190,6 +200,15 @@ nav {
   -ms-transform: translate(-50%, -50%);
   transform: translate(-50%, -50%);
   text-align: center;
+}
+
+.songName {
+  font-family: 'Permanent Marker', cursive;
+}
+
+.songArtist {
+  font-family: 'Permanent Marker', cursive;
+  color: gray;
 }
 
 
