--- a/client/src/App.css
+++ b/client/src/App.css
@@ -55,15 +55,15 @@ h1 {
 }
 
 nav {
-  font-family: 'Permanent Marker', cursive;
+  font-family: 'Abril Fatface', cursive;;
   background-image: -webkit-linear-gradient(black, gray 100%);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
-  background-color: darkgray;
+  background-color: #7D7A7A;
   list-style-type: none;
 	margin: 0;
 	padding: 0;
-  border-bottom: double;
+  border-bottom: outset;
   opacity: 0.5;
 } 
 
@@ -76,10 +76,10 @@ nav {
   flex-wrap: wrap;
   justify-content: center;
   width: 100%;
-  height: 400;
+  height: 100%;
   margin: auto;
-  background-color: black;
-  background-image: linear-gradient(to bottom right, black, #c4c5c6);
+  /* background-color: black;
+  background-image: linear-gradient(to bottom right, black, #c4c5c6); */
 }
 
 .libraryItem {
@@ -87,12 +87,13 @@ nav {
     padding: 16px;
     text-align: center;
     border: 1px solid #eee;
-    box-shadow: 0 2px 3px #ccc;
+    box-shadow: 0 2px 3px gray;
     margin: 10px;
     box-sizing: border-box;
     height: 400;
     cursor: pointer;
     flex-basis: 15em;
+    background-color: white;
 }
 
 .album_image {
@@ -101,7 +102,7 @@ nav {
 }
 
 .albumName {
-  color: white;
+  color: black;
 } 
 
 .song {
@@ -156,7 +157,8 @@ nav {
   padding: 16px;
   text-align: center;
   border: 1px solid #eee;
-  box-shadow: 0 2px 3px #ccc;
+  box-shadow: 0 2px 3px gray;
+  background-color: white;
   margin: 10px;
   box-sizing: border-box;
   height: 400;
