--- a/client/src/index.css
+++ b/client/src/index.css
@@ -6,10 +6,12 @@ body {
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover; 
+  background-image: url('./abstract-art-backdrop-926985.jpg');
 }
 
 
 
 body, html {
   height: 100%;
+  margin: 0;
 }
