--- a/client/src/App.css
+++ b/client/src/App.css
@@ -78,8 +78,6 @@ nav {
   width: 100%;
   height: 100%;
   margin: auto;
-  /* background-color: black;
-  background-image: linear-gradient(to bottom right, black, #c4c5c6); */
 }
 
 .libraryItem {
@@ -166,25 +164,6 @@ nav {
   flex-basis: 15em;
 }
 
-/* .songImage {
-  display: block;
-  width: 100%;
-  height: auto;
-} */
-
-/* .overlay {
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  height: 100%;
-  width: 100%;
-  opacity: 0;
-  transition: .5s ease;
-  background-color: gray;
-} */
-
 .imageContainer:hover .songImage {
   background-color: gray;
   opacity: 0.2;
@@ -213,8 +192,41 @@ nav {
   color: gray;
 }
 
+.footerstatic {
+  position: fixed;
+  bottom: 0;
+  display: block;
+  width: 100%;
+  z-index: 100;
+  pointer-events: none;
+}
 
+.player-bar {
+  background: white;
+  opacity: 0.9;
+  position: relative;
+  height: 60px;
+  width: 100%;
+  -webkit-box-align: center;
+  align-items: center;
+  border-top: solid 1px #e4e4e4;
+  display: flex;
+  flex-wrap: nowrap;
+  padding: 0 40px;
+}
 
+.controls {
+  max-width: 120px;
+  min-width: 90px;
+}
 
+.grid-space-between {
+  justify-content: space-between;
+}
 
+.grid {
+  display: flex;
+  margin: 0 auto;
+  padding: 0;
+}
 
